test/errors/comments_error/zs/see_tag_error.zs
package see_tag_error;

/**
 * Test structure.
 *
 * @see Unexisting.
 */
struct Test
{
    int32 test;
};
